--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 
 	<body>
 		<h1><a href="https://github.com/PYTHONKOR/skbtvepg">HOME</a></h1>	
-		<h1><a href="https://pythonkor.github.io/skbtvepg/mj_epg.xml">SK btv epg</a></h1>
+		<h1><a href="https://pythonkor.github.io/skbtvepg/epg.xml">SK btv epg</a></h1>
 	</body>
 </html>
